Fix sparklines getting cropped

--- a/app/components/TweetGraph/_TweetGraph.scss
+++ b/app/components/TweetGraph/_TweetGraph.scss
@@ -32,9 +32,11 @@
   margin-left: -46px;
 }
 
-.sparklines {
+.sparklines,
+.sparklines svg {
   width: 100%;
   height: 40px;
+
 }
 
 .bar {
